--- a/memes.css
+++ b/memes.css
@@ -34,7 +34,7 @@ header{
 
 header img{
     width: 3em;
-    height: 1.5em;
+    height: 1.7em;
     cursor:pointer;
 }
 
@@ -60,7 +60,7 @@ header ul li .active{
 } */
 
 header ul li a:hover{
-    color: #fff;
+    color: #bd2323;
 }
 
 .top-home{
@@ -68,7 +68,7 @@ header ul li a:hover{
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
