--- a/memes.css
+++ b/memes.css
@@ -64,7 +64,7 @@ header ul li a:hover{
 }
 
 .top-home{
-    background-image: url("top-home.jpg");
+    background-image: url("top-home_copy.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
