--- a/css/memes.css
+++ b/css/memes.css
@@ -62,10 +62,13 @@
   
 header{
     background-color: transparent;
-    box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1);
-    width: 100%;
     position: fixed;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
     z-index: 1; }
+    .show__background{
+        background-image: linear-gradient(to right, black, black, black, rgba(58, 2, 2, 0.8), black, black, black);
+        box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1); }
     .header__logo{
         width: 7rem;
         height: 4rem;
@@ -74,17 +77,16 @@ header{
         @media only screen and (max-width: 56.25em) {
             .header__logo{
                 width: 6rem;
-                height: 3.5rem;
-            }
-        }
+                height: 3.5rem; } }
         @media only screen and (max-width: 37.5em) {
             .header__logo{
                 width: 5rem;
-                height: 2.8rem;
-            }
-        }
+                height: 2.8rem; } }
+                .header__logo-a{
+                    padding: 0;
+                    line-height: 0; }
     header ul{
-        padding: 2rem 5rem;
+        padding: 2rem 4rem;
         display: flex;
         justify-content: center;
         align-items: center; }
@@ -92,48 +94,44 @@ header{
             header ul{
               padding: 2.2rem 2rem; } }
         header ul li{
-            padding: 0 4rem;
             font-family: "Bebas Neue", sans-serif;
             text-transform: uppercase; }
             header ul li a{
                 color: #f9c004;
                 transition: color 0.3s;
                 letter-spacing: .2rem;
+                padding: 2rem 3.5rem;
                 font-size: 1.8rem;
                 text-shadow: 0 10px 10px black; }
                 @media only screen and (max-width: 37.5em) {
                     header ul li a{
-                        font-size: 1.35rem;
-                    } }
+                        font-size: 1.35rem; } }
             header ul li a:hover{
                 color: #bd2323; }
             header ul li a:focus{
                 color: #fff; }
 
+
 .top-home{
     background-image: url("../images/jpg/top-home_copy.jpg");
-    top: 0;
     position: absolute;
-    filter: blur(2px) contrast(110%) brightness(73%);
+    filter: blur(2px) contrast(110%) brightness(70%);
     background-size: cover;
     background-position: center;
     height: 100%;
-    width: 100%;
-    z-index: -1; }
+    width: 100%; }
     .home__logo{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100vw;
         height: 100vh; }
         .home__logo img{
             width: 23%;
             filter: brightness(95%) drop-shadow(0 10px 10px black); }
             @media only screen and (max-width: 56.25em) {
                 .home__logo img{
-                    width: 27%;
-                } }
+                    width: 27%; } }
                 @media only screen and (max-width: 37.5em) {
                     .home__logo img {
                       width: 33%; } }
