--- a/css/memes.css
+++ b/css/memes.css
@@ -106,12 +106,18 @@
 header{
     background-color: transparent;
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     transition: all 0.3s ease-in-out;
     z-index: 100; }
     .show__background{
         background-color: #000;
         box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1); }
+    .small__device,
+    .ham__menu{
+      display: none; }
     .header__logo{
         width: 7rem;
         height: 4rem;
@@ -128,28 +134,59 @@ header{
                 .header__logo-a{
                     padding: 0;
                     line-height: 0; }
+                @media only screen and (max-width: 37.5em) {
+                  .header__logo-list{
+                    display: none;} }
     header ul{
-        padding: 2rem 4rem;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
+        width: min(90%, 120rem);
         align-items: center; }
-        @media only screen and (max-width: 56.25em) {
-            header ul{
-              padding: 2.2rem 2rem; } }
         header ul li{
             font-family: "Bebas Neue", sans-serif;
+            padding: 2.5rem 0;
             text-transform: uppercase; }
+            .header__logo-list,
+            .header__logo-a{
+              padding: 0; }
             header ul li a{
                 color: #f9c004;
                 transition: color 0.3s;
                 letter-spacing: 2px;
-                padding: 2rem 3.5rem;
+                padding: 2.5rem 0;
                 font-size: 1.6rem;
                 text-shadow: 0 10px 10px black; }
-            header ul li a:hover{
+            header ul li a:is(:hover, :focus){
                 color: #bd2323; }
-            header ul li a:focus{
-                color: #fff; }
+        @media only screen and (max-width: 37.5em) {
+          header{
+            justify-content: space-between;
+            background: #000;
+            padding: 3.5rem 2.2rem;
+            height: 5rem;}
+            .small__device,
+            .ham__menu{
+              display: block; }
+              .ham__menu-bar{
+                color: #f9c004; }
+            header ul{
+              display: none;
+              position: absolute;
+              background: #000;
+              top: 7rem;
+              left: 0;
+              width: 100%;}
+              header ul li{
+                width: 100%;
+                border-top: 1px solid rgba(255, 255, 255, 0.1);
+                padding: 0; }
+                header ul li a{
+                  display: block;
+                  justify-content: stretch;
+                  text-align: center;}
+            .ul__show{
+              display: block;
+            } }
 
 .home__section{
     background-image: url("../images/jpg/home-image.jpg");
@@ -299,10 +336,10 @@ header{
           position: relative; }
           .about__content img{
             position: absolute;
-            width: 70%;
-            height: 70%;
+            width: 80%;
             mix-blend-mode: multiply;
             opacity: 0.2;
+            height: 70%;
             object-fit: cover;
             top: 20%;
             left: 13%;
