--- a/css/memes.css
+++ b/css/memes.css
@@ -88,6 +88,11 @@
   .sec_pad{
     padding: 10rem 7rem;
   }
+  @media only screen and (max-width: 37.5em) {
+    .sec_pad{
+      padding: 9rem, 4.5rem;
+    }
+  }
   .section__heading{
       font-size: 3.2rem;
       font-weight: 600;
@@ -117,6 +122,7 @@ header{
         box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1); }
     .small__device,
     .ham__menu{
+      cursor: pointer;
       display: none; }
     .header__logo{
         width: 7rem;
@@ -174,6 +180,8 @@ header{
               position: absolute;
               background: #000;
               top: 7rem;
+              opacity: 0;
+              transition: all 0.3s;
               left: 0;
               width: 100%;}
               header ul li{
@@ -185,6 +193,7 @@ header{
                   justify-content: stretch;
                   text-align: center;}
             .ul__show{
+              opacity: 1;
               display: block;
             } }
 
