--- a/css/memes.css
+++ b/css/memes.css
@@ -182,7 +182,7 @@ header{
               top: 100%;
               opacity: 0;
               visibility: hidden;
-              transition: all 1s;
+              transition: all .3s;
               left: 0;
               width: 100%;}
               .header__links li{
