--- a/css/memes.css
+++ b/css/memes.css
@@ -86,12 +86,7 @@
     font-size: 3rem;
   }
   .sec_pad{
-    padding: 10rem 7rem;
-  }
-  @media only screen and (max-width: 37.5em) {
-    .sec_pad{
-      padding: 9rem, 4.5rem;
-    }
+    padding: 11rem 7rem;
   }
   .section__heading{
       font-size: 3.2rem;
@@ -106,6 +101,17 @@
     color: rgb(1, 13, 20);
     border-bottom: 2px solid rgb(1, 13, 20);
     margin-bottom: 1rem;
+  }
+  @media only screen and (max-width: 37.5em) {
+    .section__heading,
+    .primary__heading{
+      font-size: 2.5rem; }
+      .section__tagline{
+        font-size: 2rem;
+      }
+    .sec_pad{
+      padding: 7rem, 4rem;
+    }
   }
   
 header{
@@ -146,11 +152,11 @@ header{
     .header__links{
         display: flex;
         justify-content: space-evenly;
-        width: min(90%, 120rem);
+        width: min(90%, 90rem);
         align-items: center; }
         .header__links li{
             font-family: "Bebas Neue", sans-serif;
-            padding: 2.5rem 0;
+            padding: 2rem 0;
             text-transform: uppercase; }
             .header__logo-list,
             .header__logo-a{
@@ -159,7 +165,7 @@ header{
                 color: #f9c004;
                 transition: color 0.3s;
                 letter-spacing: 2px;
-                padding: 2.5rem 0;
+                padding: 2rem 0;
                 font-size: 1.6rem;
                 text-shadow: 0 10px 10px black; }
             .header__links li a:is(:hover, :focus){
@@ -269,7 +275,7 @@ header{
             background-color: #fff; }
             .service__card:nth-child(4){
                 background-color: #f9c004; }
-            .food__truck-div{
+            /* .food__truck-div{
               overflow: hidden;
               width: 40%; }
               .food__truck{
@@ -280,25 +286,24 @@ header{
                   0%{
                     left: -40%;}
                   100%{
-                    left: 120%;} }
+                    left: 120%;} } */
 
 .about__section{
-  background: #e9e9e9;}
+  background: #fff;}
   .about__section-part{
     display: grid;
     justify-items: center;
     align-items: center;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem; }
-  @media only screen and (max-width: 85em) {
-    .about__section-part{
-      grid-template-columns: 1fr;} }
     .about__images{
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
       width: 61.2rem; }
       @media only screen and (max-width: 85em) {
+        .about__section-part{
+          grid-template-columns: 1fr;}
         .about__images{
           order: 1;
           margin-top: 3rem; }}
@@ -311,14 +316,16 @@ header{
             width: 100%;
             transition: all 1s;
             height: 100%; }
+            .about__image-container img:hover{
+              transform: scale(1.2);}
           .about__image-container:nth-child(3){
-            margin-left: 5rem;
-            width: 25rem;
-            height: 25rem; }
+            margin-left: 3rem;
+            width: 27rem;
+            height: 27rem; }
           .about__image-container:nth-child(2){
-            margin-top: 5rem;
-            width: 25rem;
-            height: 25rem; }
+            margin-top: 3rem;
+            width: 27rem;
+            height: 27rem; }
           @media only screen and (max-width: 56.75em) {
             .about__images{
               width: 51.2rem;}
@@ -326,8 +333,8 @@ header{
               width: 25rem;
               height: 25rem; }
              .about__image-container:is(:nth-child(2), :nth-child(3)){
-              width: 20rem;
-              height: 20rem;} }
+              width: 22rem;
+              height: 22rem;} }
           @media only screen and (max-width: 40.5em) {
             .about__images{
               width: 100%; }
@@ -336,25 +343,11 @@ header{
               height: 27rem; }
             .about__image-container:is(:nth-child(2), :nth-child(3)){
               width: 100%;
-              height: 20rem;
+              height: 22rem;
               margin: 0; }}
-            .about__image-container img:hover{
-              transform: scale(1.2);}
       .about__content{
-        width: min(90%, 80rem);}
+        width: min(95%, 80rem);}
         .about__content{
           position: relative; }
-          .about__content img{
-            position: absolute;
-            width: 80%;
-            mix-blend-mode: multiply;
-            opacity: 0.2;
-            height: 70%;
-            object-fit: cover;
-            top: 20%;
-            left: 13%;
-            transform: scaleY(-1);
-            rotate: 165deg;
-          }
 
 
